Updating to v0.7 - Changing berteh/scribusgenerator to packagist version - Adding GoogleBooks API example - Separating KNV and third-party providers by adding a separate function `includeProviders()` - Making $sortOrder configurable - Many improvements to descriptions - Removing cruft (index.php)

--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,11 @@
             "role": "Maintainer"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Fundevogel/ScribusGenerator"
-        }
-    ],
     "require": {
+        "berteh/scribusgenerator": "dev-master",
         "doctrine/cache": "^1.8",
         "getkirby/toolkit": "^2.5",
-        "scriptotek/google-books": "^0.2.4",
-        "berteh/scribusgenerator": "dev-master"
+        "scriptotek/google-books": "^0.2.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14"
