--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Composer + sensitive files
 /composer.lock
+/*.login.json
 /*.cache
 /vendor
+
+# Auto-generated
+/dist
+
+# Tests
 /tests/Resources/*_actual.csv
 /tests/Resources/*_actual.jpg
